# dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .pre-commit-config.yaml  Brewfile  Brewfile.bak  Pro.terminal  README.md  TODO.md  app-info.md  apps.md  backup.sh  mkdocs.yml  pyproject.toml  setup.sh  todo.md  todo.txt
.atom/: config.cson  keymap.cson  projects.cson  styles.less
alacritty/: alacritty.yml
bash/: .bashrc
cargo/: crates.txt
config/: config-Mojave.sh
docs/: install-misc.md  misc-installations.md  pyenv-poetry-venv.md  python-projects.md  restore-applebooks.md  setup-backup.md  setup-build.md  setup-icons.md  setup-reinstall.md  sparsebundles.md
freecad/: system.cfg  user.cfg
ghostty/: config
git/: .gitconfig
gitui/: key_bindings.ron  theme.ron  theme.ron.old
hammerspoon/: init.lua
helix/: config.toml  languages.toml  reinstall.sh
homebrew/: Brewfile
icons/: Anki.icns  Audacity.icns  Notion.icns  README.md
iterm2/: Fira Code__lovelace.json  FiraCode.json  JetBrains-Mono-Nerd.json  JetBrains-Mono__lovelace.json  Profile_FiraCode-lovelace.json  com.googlecode.iterm2.plist
karabiner/: karabiner.json
keychron/: k6_pro_ansi_rgb_v1.2.json
kitty/: kitty.conf
macOS/: .bashrc
moom/: com.manytricks.Moom.plist
npm/: packages.txt
nvim/: README.md  REFERENCE.md  TODO.md  init.lua  init.vim
pqr/: config.toml  pqr.toml
prusa/: PrusaSlicer.ini
ruff/: ruff.toml
scripts/: archive-apple-books-library.sh  backup.py  brew.txt  config-macos-defaults.sh  config-macos-view-settings.sh  config-macos-windows.sh  config-ssh.sh  (+37 more)
(+251 files in other folders)
