[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^5.5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
mkdocs = "^1.1.2"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
